force-app/main/default/objects/Questions__c/Questions__c.object-meta.xml
<CustomObject>
    <description>Stockage des questions relatives aux questionnaires de DA</description>
    <label>Question</label>
    <nameField>
        <label>Numéro Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>