force-app/main/default/objects/Questions__c/fields/Nom_du_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_Questionnaire__c</fullName>
    <label>Nom du Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>