force-app/main/default/objects/Questions__c/fields/Reference_externe__c.field-meta.xml
<CustomField>
    <fullName>Reference_externe__c</fullName>
    <externalId>true</externalId>
    <label>Référence externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>