force-app/main/default/objects/Questions__c/fields/Reponses_suggerees__c.field-meta.xml
<CustomField>
    <fullName>Reponses_suggerees__c</fullName>
    <label>Réponses suggerées</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>