force-app/main/default/objects/Questions__c/fields/Tech_Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Tech_Question_Order__c</fullName>
    <formula>VALUE( Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>