force-app/main/default/objects/Questions__c/fields/Type_de_question__c.field-meta.xml
<CustomField>
    <fullName>Type_de_question__c</fullName>
    <inlineHelpText>Concerne uniquement le Bilan.</inlineHelpText>
    <label>Type de question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primordiale</fullName>
            </value>
            <value>
                <fullName>Importante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>