force-app/main/default/objects/Questions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Type_de_question__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Reponses_suggerees__c</columns>
    <columns>Nom_du_Questionnaire__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>en_US</language>
</ListView>